# pcpartinventory

./: .env  .env.example  .gitignore  CI_CD_GUIDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.sqlx/: query-0d77649789e317cb18633032670e430d95fd0111c6364764203a0eac609ccc82.json  query-1329e5b4b7f9801463a49fc0f1d813c076f853aab3e27730cbac5b34f8644ec2.json  query-152879238796f2cf6561d8783a5bb6fd3b724c6928bb79f32687972693bfb43c.json  query-35c32d635324fca499528b189f346aa274b2528a9623c9a6a1caa99b133e31a7.json  query-3e7f4372aa85294ed8d0a2bf42cd36e04d2eaccbae3b6bcee61cc3c6983b36bc.json  query-431ab48bb0e36736704555e3b88cc563d2fb3a44926bd75ea2269ac1cb778c35.json  query-43faf4d8e2e7e298fc6d4a584ad1af9efd1d574bbb3f1e89738c850ed6feb0e1.json  query-47053389f2f682edc7f44214ab8423fba404aefadc082932b5d329ddab8137ec.json  query-55cc7f88a1fad9892d56c7acd598fb0d401e23340304018c44b2d9017735aa4d.json  query-80b58f9e1510310a9a0fb64286cb194c2e397741b0b751634bdd9315e88ec192.json  query-a63087bb0228a0f5616cf680105c5eb66ff3f7ae16418db230fe91b9f1cf5939.json  query-accbece46ea1f64d07a0c40421cacf4616482ada1772436c465af8e8ecab2b7e.json  query-b9a7954ac5c19ad62a65618edce28c74a214718623882342ff44c8d03a3eef9c.json  query-bf0655a643abb7bbf3022eb604683bf01c18cc143a0bf6805e5346aedf9bbdd1.json  query-c24d0b092edaadf4652a62849ddcde552e606df80b166c03baa2597da752a0ee.json  query-ce3dd5314ec266e96eab8aa3d0dcb1cd3c3c214e7609f292a4ba7c454837e8e6.json  (+2 more)
frontend/: next.config.js  package.json
src/: lib.rs  (+1 more)
(+40 files in other folders)
