[package]
name = "pc-inventory-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "pc_inventory_backend"
path = "src/lib.rs"

[[bin]]
name = "pc-inventory-backend"
path = "src/main.rs"

[dependencies]
actix-web = "4.9"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal", "migrate"] }
tokio = { version = "1.40", features = ["full"] }
env_logger = "0.11"
dotenv = "0.15"
rust_decimal = { version = "1.36", features = ["serde"] }
anyhow = "1.0"

[dev-dependencies]
actix-rt = "2.10"
tokio-test = "0.4"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"